service/aws_lb_lb_listener.tf
resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.lb.arn
    port = "80"
    protocol = "HTTP"

    default_action {
        target_group_arn = aws_lb_target_group.http.arn
        type = "forward"
    }
}
